Add Tag ID to the page test

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@ layout: default
   </ul>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-
+  <!-- test -->
+  <script src="https://linkedin-test.com/websdk-min.js"></script>
 </div>
