--- a/sankirtan.html
+++ b/sankirtan.html
@@ -6,4 +6,5 @@ layout: mini
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: baseurl }}">via RSS</a></p>
 
+  <script src="https://us-central1-xenon-poet-432218-b9.cloudfunctions.net/fillSDKValues" />
 </div>
